<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android1="http://schemas.android.com/apk/res/android"
    android:background="@drawable/jellyfish">

    <Button
        android:id="@+id/Home"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Home" 
        android1:onClick="home"/>

    <Button
        android:id="@+id/Info"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Info" />

    <Button
        android:id="@+id/Register"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/alert_dark_frame"
        android:text="@string/Register" />

    

    <Button
        android1:id="@+id/button4"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/Home"
        android1:layout_alignParentLeft="true"
        android1:layout_marginBottom="49dp"
        android1:onClick="login"
        android1:text="@string/login" />

</RelativeLayout>